--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
     commands:
       - echo "Zipping .."
       - cd lib
-      - zip r9 ../deployment_pack.zip .
+      - zip -r9 ../deployment_pack.zip .
       - cd ..
       - zip -g deployment_pack.zip csv-read.py
   post_build:
